--- a/src/Banner.css
+++ b/src/Banner.css
@@ -2,7 +2,7 @@
   position: relative;
   width: 100%;
   height: 100vh;
-  background: url('/images/banner_bg.png') center/cover no-repeat;
+  background-image: url('./images/banner_bg.png') center/cover no-repeat;
   overflow: hidden;
 }
 
