--- a/src/Banner.css
+++ b/src/Banner.css
@@ -3,13 +3,15 @@
   width: 100%;
   height: 50vh;
   overflow: hidden;
+  margin: 0;
+  padding: 0;
 }
 
 .banner-logo {
   position: fixed;
   top: 20px;
   left: 20px;
-  height: 60px;
+  height: 120px;
   z-index: 1000;  
 }
 
@@ -87,7 +89,7 @@
     height: 50vh;  /* trên mobile vẫn đủ nhìn */
   }
   .banner-logo {
-    height: 40px;
+    height: 80px;
     top: 10px;
     left: 10px;
   }
