--- a/src/Banner.css
+++ b/src/Banner.css
@@ -31,7 +31,7 @@
 }
 
 .banner-brand-logo {
-  height: 38px;
+  height: 110px;
   width: auto;
 }
 
@@ -43,15 +43,15 @@
 
 .banner-brand-name {
   font-weight: 700;
-  color: #ffffff;
-  font-size: 16px;
-  text-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
+  color: #03116b;
+  font-size: 32px;
+  text-shadow: 0 1px 2px rgba(255, 255, 255, 0.6);
 }
 
 .banner-brand-tagline {
-  font-size: 12px;
-  color: #e5e7eb;
-  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.4);
+  font-size: 18px;
+  color: #03116b;
+  text-shadow: 0 1px 2px rgba(255, 255, 255, 0.7);
 }
 
 .banner-nav {
@@ -204,4 +204,3 @@
     min-width: 120px;
   }
 }
-
